--- a/.github/workflows/n1-build.yml
+++ b/.github/workflows/n1-build.yml
@@ -1,4 +1,4 @@
-name: n1 docker OpenWrt CI
+name: OpenWrt-Build-N1
 on:
   schedule:
     - cron:  0 7 * * 6
@@ -8,8 +8,8 @@ on:
     paths:
       - '.config.n1.docker'
       - 'n1/**'
-  #watch:
-  #  types: [started]
+  watch:
+    types: [started]
 
     
 jobs:
